--- a/.env.local.example
+++ b/.env.local.example
@@ -10,5 +10,5 @@ MAKE_WEBHOOK_URL=your_make_webhook_url
 # Site
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-# Admin (add after first signup)
-ADMIN_USER_ID=your_admin_user_id
+# Admin (add after first signup, comma-separated for multiple admins)
+ADMIN_USER_IDS=your_admin_user_id_1,your_admin_user_id_2
